# goit-pythonweb-hw-012

./: .env.example  docker-compose.yml  main.py  pyproject.toml
docs/source/: conf.py  index.rst
src/conf/: config.py  email.py  redis.py
src/repository/: contacts.py  users.py
src/routes/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py
src/templates/: pass_reset.html
tests/: conftest.py
tests/test_repository/: test_contacts.py  test_users.py
tests/test_routes/: test_contacts.py  test_users.py
tests/test_services/: test_auth.py  test_contacts.py
